@@ -1,3 +1,7 @@
+2002-03-29  Alasdair Allan <aa@astro.ex.ac.uk>
+
+        * Added freeze() functions for persistent store
+        
 2002-03-28  Alasdair Allan <aa@astro.ex.ac.uk>
 
         * Parse.pm: Added a whole bunch of query methods needed by
